# chario-tests

./: .gitignore  CMakeLists.txt  README.md
include/: chario.h  libchario.h  list.h  output.h  proftimer-syscalls.h  proftimer.h  realtime.h  simplefs.h
libs/: CMakeLists.txt  libchario.c  output.c  proftimer.c  realtime.c  simplefs.c
linux-include/: README.md
results/: bs-timing-phys.R  bs-timing-phys.csv  bs-timing.R  bs-timing.csv
tests/: CMakeLists.txt  bs-timing-phys.c  bs-timing.c  libchario-test-2.c  libchario-test.c  simplefs-test-1.c
